Fix final immersive map review findings