@@ -41,7 +41,6 @@ import java.time.LocalDate;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -347,11 +346,11 @@ public class PlanetarySystem {
                 continue;
             }
             if ((administration != null) && !administration.equals(planetAdministration)) {
-                return Collections.emptyList();
+                return List.of();
             }
             administration = planetAdministration;
         }
-        return (administration == null) ? Collections.emptyList() : List.copyOf(administration);
+        return (administration == null) ? List.of() : List.copyOf(administration);
     }
 
     /**
